<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".PreLoginScreen">

    i<ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <TextView
        android:id="@+id/startActivityMain"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:fontFamily="@font/comicneue_bold"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="MainActivity"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.949" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:fontFamily="@font/comicneue_bold"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/welcomeToJAuth"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/oxfordBlue"
        android:text="@string/signIn"
        android:textAllCaps="false"
        android:textColor="@color/lightCyan"
        android:fontFamily="@font/comicneue_bold"
        app:backgroundTint="@color/oxfordBlue"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/babyBlue"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/oxfordBlue"
        android:fontFamily="@font/comicneue_bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
